2006-05-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/accessibility/AccessibleContext.java
	(getAccessibleComponent): Fixed typo in docs,
	* javax/swing/JLabel.java:
	(AccessibleJLabel.getAccessibleName): Check for explicit 
	accessibleName,
	* javax/swing/JTableHeader.java
	(AccessibleJTableHeaderEntry.columnIndex): New field,
	(AccessibleJTableHeaderEntry.parent): New field,
	(AccessibleJTableHeaderEntry.table): New field,
	(AccessibleJTableHeaderEntry.AccessibleJTableHeaderEntry()): 
	Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleColumnHeaderRenderer): New 
	utility method,
	(AccessibleJTableHeaderEntry.addFocusListener): Implemented,
	(AccessibleJTableHeaderEntry.addPropertyChangeListener): Implemented,
	(AccessibleJTableHeaderEntry.contains): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleAction): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleAt): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleChild): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleChildrenCount): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleComponent): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleContext): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleDescription): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleIndexInParent): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleName): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleRole): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleSelection): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleStateSet): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleText): Implemented,
	(AccessibleJTableHeaderEntry.getAccessibleValue): Implemented,
	(AccessibleJTableHeaderEntry.getBackground): Implemented,
	(AccessibleJTableHeaderEntry.getBounds): Implemented,
	(AccessibleJTableHeaderEntry.getCursor): Implemented,
	(AccessibleJTableHeaderEntry.getFont): Implemented,