@@ -1,3 +1,9 @@
+2006-05-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+	
+	PR 27680
+	* javax/swing/JTable.java (BooleanCellRenderer, IconCellRenderer):
+	Set horizontal alignment to centered.
+
 2006-05-22  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/accessibility/AccessibleContext.java
